fix(toolbar-frame): align cancel search, adjust font-sizes

--- a/src/_toolbar-frame.less
+++ b/src/_toolbar-frame.less
@@ -54,10 +54,10 @@
     }
     .cancel_search {
       padding-left: 10px;
+      transform: translateX(1px);
       color: transparent;
-      font-size: 12px;
+      font-size: @font-size-toolbar;
       font-weight: normal;
-      vertical-align: baseline;
     }
     #feed_current_unread {
       min-width: unset;
@@ -66,7 +66,7 @@
       border-color: transparent;
       background-color: @color-fade8;
       color: @default-bg;
-      font-size: 12px;
+      font-size: @font-size-small;
     }
     #selected_prompt {
       margin-right: 25px;
